@@ -5,7 +5,9 @@ import com.cncstock.model.entity.stockitem.StockItem;
 import com.cncstock.repository.stockitem.LowStockItemRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import javax.persistence.EntityNotFoundException;
 import java.sql.Date;
 import java.util.HashSet;
 import java.util.List;
@@ -26,41 +28,60 @@ public class LowStockService {
         this.stockItemService = stockItemService;
     }
 
+    @Transactional
     public List<LowStockItem> updateWithMostRecentItems() {
         List<StockItem> incomingLowStockItemsList = stockItemService.getLowStockItems();
-        List<LowStockItem> existingLowStockItemsList =  lowStockItemRepository.findAll();
+        List<LowStockItem> existingLowStockItemsList = lowStockItemRepository.findAll();
 
-        // Convert to Sets for efficient lookup and removal
-        Set<StockItem> incomingLowStockItems = new HashSet<>(incomingLowStockItemsList);
-        Set<StockItem> existingStockItems = existingLowStockItemsList.stream()
+        // Convert to Sets for efficient operations
+        Set<StockItem> incomingLowStockItemsSet = new HashSet<>(incomingLowStockItemsList);
+        Set<StockItem> existingStockItemsSet = existingLowStockItemsList.stream()
                 .map(LowStockItem::getStockItem)
                 .collect(Collectors.toSet());
 
-        // Prepare a set for items to be removed
+        // Determine items to remove (existing but not in incoming)
         Set<LowStockItem> itemsToRemove = existingLowStockItemsList.stream()
-                .filter(item -> !incomingLowStockItems.contains(item.getStockItem()))
+                .filter(item -> !incomingLowStockItemsSet.contains(item.getStockItem()))
                 .collect(Collectors.toSet());
 
-        // Remove items that are no longer low stock
-        existingLowStockItemsList.removeAll(itemsToRemove);
-        // Optionally, if you need to update the database here, remove them from the database
+        // Determine incoming items that are already in existing to avoid re-adding them
+        incomingLowStockItemsList.removeIf(existingStockItemsSet::contains);
 
-        // Find items that are newly low stock
-        incomingLowStockItems.removeAll(existingStockItems); // Remaining items in incomingLowStockItems are new low stock items
+        // Remove items from the existing list/database
+        if (!itemsToRemove.isEmpty()) {
+            lowStockItemRepository.deleteAllInBatch(itemsToRemove);
+        }
 
-        // Convert the remaining incomingLowStockItems back to LowStockItem and save/update them in the database
+        // Prepare new low stock items to add
         Date todaysDate = new Date(System.currentTimeMillis());
-        List<LowStockItem> newLowStockItems = incomingLowStockItemsList.stream()
-                .filter(incomingLowStockItems::contains) // Filter only new low stock items
-                .map(stockItem -> new LowStockItem(stockItem, todaysDate, false, null)) // Assuming constructor usage
-                .toList();
+        List<LowStockItem> itemsToAdd = incomingLowStockItemsList.stream()
+                .map(stockItem -> new LowStockItem(stockItem, todaysDate, false, null))
+                .collect(Collectors.toList());
 
+        // Add new items to the database
+        if (!itemsToAdd.isEmpty()) {
+            lowStockItemRepository.saveAll(itemsToAdd);
+        }
 
-        if (!newLowStockItems.isEmpty()) lowStockItemRepository.deleteAllInBatch();
-
-        lowStockItemRepository.saveAll(newLowStockItems);
-
+        // Return the latest state from the database
         return lowStockItemRepository.findAll();
+    }
+
+    public LowStockItem toggleOrderDate(Long id) {
+        return lowStockItemRepository.findById(id).map(lowStockItem -> {
+            Date prevOrderDate = lowStockItem.getOrderDate();
+            if (prevOrderDate == null) {
+                Date todayDate = new Date(System.currentTimeMillis());
+                lowStockItem.setOrderDate(todayDate);
+                lowStockItem.setOrdered(true);
+
+            } else {
+
+                lowStockItem.setOrderDate(null);
+                lowStockItem.setOrdered(false);
+            }
+            return lowStockItemRepository.save(lowStockItem);
+        }).orElseThrow(() -> new EntityNotFoundException("LowStockItem not found with id " + id));
     }
 
 
